--- a/config/default.yml
+++ b/config/default.yml
@@ -7,3 +7,8 @@ prod:
   JAM_TOKEN: CHANGEME
   JAM_URL: https://metadata.osf.io
   COLLECTIONS_PATH: ./collections.js
+
+local:
+  JAM_TOKEN: CHANGEME
+  JAM_URL: http://localhost:1212
+  COLLECTIONS_PATH: ./collections.js
